tests/ui/lifetimes/lifetime-errors/ex1-return-one-existing-name-if-else.rs
fn foo<'a>(x: &'a i32, y: &i32) -> &'a i32 {
    if x > y { x } else { y } //~ ERROR explicit lifetime
}

fn main() { }
